# vote-sim

./: .gitignore  Cargo.toml  NOTICE  README.md
configs/: debug_corr.toml  debug_multi.toml  default.toml  range_strat.toml  small_org.toml  test_irrational.toml
results/: ak_tutorial.ipynb  as_sk.py  awkward_play.ipynb  cands_from_primaries.ipynb  cands_from_primaries_c3.ipynb  consideration_effects.ipynb  plot  plot.py  read.py  requirements.txt  small_group_voting 2.ipynb  small_group_voting.ipynb  study_lib.py  study_ml
src/: config.rs  consideration.rs  considerations.rs  cov_matrix.rs  main.rs  main_orig.rs  method_tracker.rs  methods.rs  methods_orig.rs  run.rs  sim.rs  simvote.rs
src/considerations/: irrational.rs  issues.rs  likability.rs  mod.rs
src/methods/: borda.rs  btr_irv.rs  condorcet_util.rs  instant_runoff.rs  method.rs  method_sim.rs  method_tracker.rs  minimax.rs  mod.rs  multivote.rs  plurality.rs  plurality_top_n.rs  rangevoting.rs  ranked_pairs.rs  results.rs  reweighted_range.rs  star.rs  tallies.rs  test_utils.rs
