[package]
name = "voting"
version = "0.1.0"
authors = ["Topher Cawlfield <ccawlfield@gogoair.com>"]
edition = '2021'

[dependencies]
rand = "0.8"
lazy_static = "1.4"
ndarray = "0.15"
csv = "1.0"
rand_distr = "0.4"
clap = { version = "4", features = ["derive", "string"] }
parquet = "53"
arrow-array = "53"
arrow-schema = "53"
meansd = "2"
float_eq = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
