[package]
name = "voting"
version = "0.1.0"
authors = ["Topher Cawlfield <ccawlfield@gogoair.com>"]
edition = '2021'

[dependencies]
rand = "0.9"
lazy_static = "1.4"
ndarray = "0.16"
csv = "1.0"
rand_distr = "0.5"
clap = { version = "4", features = ["derive", "string"] }
parquet = "55"
arrow-array = "55.2.0"
arrow-schema = "55.2.0"
meansd = { git = "https://gitlab.com/lephto/meansd.git", branch = "main" }
float_eq = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
strum = "0.27.1"
strum_macros = "0.27.1"
log = "0.4.27"
pretty_env_logger = "0.5.0"
work-queue = "0.1.4"
